force-app/main/default/objects/FSC_Product_Mapping__mdt/FSC_Product_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>FSC Product Mapping</label>
    <pluralLabel>FSC Product Mappings</pluralLabel>
</CustomObject>