force-app/main/default/objects/FSC_Product_Mapping__mdt/fields/Financial_Account_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Product_Name__c</fullName>
    <label>Financial Account Product Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>