force-app/main/default/objects/FSC_Product_Mapping__mdt/fields/Lead_Opportunity_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Opportunity_Product_Type__c</fullName>
    <label>Lead/Opportunity Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>