force-app/main/default/objects/FSC_Product_Mapping__mdt/fields/Opportunity_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Name__c</fullName>
    <label>Opportunity Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>